# Galad-Islands

./: .gitignore  404.html  CHANGELOG.md  CHANGELOG_EN.md  CLEAN_MODELS_GUIDE.md  CONTRIBUTING.md  GameDesign.md  RELEASE_README.md  SCOUT_AI_IMPROVEMENTS.md  STATUS.md  TACHES_A_FAIRE_MAP_RESOLUTION.md  action-bar.py  benchmark.py  boutique.py  build.spec  clean_models.py  config.py  config_manager.py  demo_ai_advanced.py  demo_base_ai.py  demo_benchmarks.py  demo_kamikaze_ai.py  dev.py  galad_config.json  game.py  index.html  main.py  menu.py  menuV2.py  mkdocs.yml  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  run_tests.py  settings.py  setup_dev.py  setup_team_hooks.py  sitemap.xml  technicalGameDesign.md  (+9 more)
.scripts/: test_spe_leviathan.py
IA/: Decisions.md  Info_importante.md  TODO.md
assets/: README_ASSETS.md
contact/: index.html
docs/: BOUTIQUE_DOCUMENTATION.md  BOUTIQUE_UNIFIEE.md  WORKFLOW.md  contact.md  getting-started.md  ia_ml_documentation.md  index.md  strategy.md  support.md  units.md
en/: index.html
hooks/: pre-commit
ia/: AIControlProcessor.py  AITraining.py  architectAI.joblib  architectAIComponent.py  architectAIComponent2.py  decision_tree.py  pathfinding.py  test_AI.py  trainAI.py
ia_old/: AIControlProcessor.py  architectAI.joblib  test_AI.py
models/: README.md  barhamus_ai_120.pkl  barhamus_ai_124.pkl  barhamus_ai_129.pkl  barhamus_ai_133.pkl  barhamus_ai_30.pkl  barhamus_ai_333.pkl  barhamus_ai_335.pkl  barhamus_ai_364.pkl  barhamus_ai_367.pkl  barhamus_ai_370.pkl  barhamus_ai_373.pkl  barhamus_ai_376.pkl  barhamus_ai_439.pkl  barhamus_ai_443.pkl  barhamus_ai_447.pkl  barhamus_ai_451.pkl  barhamus_ai_55.pkl  barhamus_ai_59.pkl  barhamus_ai_6.pkl  barhamus_ai_63.pkl  barhamus_ai_67.pkl  barhamus_ai_69.pkl  barhamus_ai_71.pkl  barhamus_ai_8.pkl  barhamus_ai_84.pkl  base_ai_advanced_model.pkl  base_ai_model.pkl  kamikaze_ai_model.pkl  leviathan_ai.pkl  leviathan_ai_old_3.pkl  leviathan_ai_old_4.pkl  leviathan_ai_old_5.pkl  leviathan_ai_old_6.pkl
scripts/: bump-version.sh  clean-changelog.py  clean_models.py  debug_base_ai_model.py  debug_base_ai_tree_inspection.py  fake_selfplay_visual.py  sound-convert.sh  test_base_ai_execution.py
search/: search_index.json
setup/: HOOKS_UNIVERSAL.md  README.md  install_commitizen_universal.py  install_hooks_with_bump.py  test_hooks.py
site/: 404.html  index.html  sitemap.xml
src/: afficherModale.py  game.py  map.py  options_window.py  version.py
support/: index.html
tests/: README.md  conftest.py  profile_game.py  test_AI.py  test_actionbar_selfplay.py  test_ai_processor_manager.py  test_base_ai_limits.py  test_boutique_unified.py  test_components.py  test_ia_architect.py  test_ia_barhamus.py  test_ia_base.py  test_ia_druid.py  test_ia_goal_evaluator.py  test_ia_kamikaze.py  test_ia_leviathan.py  test_ia_services.py  test_integration.py  test_knockback.py  test_localization.py  test_tips.py  (+7 more)
(+668 files in other folders)
