[project]
name = "galad-islands"
version = "0.6.0"
description = "Jeu Galad Islands"
authors = [
    { name="Alluin Edouard", email="edouard.alluin@etu.univ-littoral.fr" },
    { name="Behani Julien", email="julien.behani@etu.univ-littoral.fr" },
    { name="Cailliau Ethann", email="ethann.cailliau@etu.univ-littoral.fr" },
    { name="Damman Alexandre", email="alexandre.damman@etu.univ-littoral.fr" },
    { name="Fournier Enzo", email="enzo.fournier@etu.univ-littoral.fr" },
    { name="Lambert Romain", email="romain.lambert@etu.univ-littoral.fr" }
]



# Configuration commitizen pour l'équipe
[tool.commitizen]
name = "cz_conventional_commits" 
version_provider = "pep621"
tag_format = "v$version"
update_changelog_on_bump = true
bump_message = "chore: bump version $current_version → $new_version"

# Types de commits à inclure dans le changelog (pour les utilisateurs)
changelog_incremental = true
changelog_start_rev = "v0.1.0"

# Configuration du changelog
[tool.commitizen.changelog]
# Exclure les types de commits non pertinents pour les utilisateurs
exclude_commit_patterns = [
    "^ci:",
    "^build:",  
    "^chore:",
    "^docs:",
    "^style:",
    "^test:",
    "^.*(workflow|pipeline|github|actions).*",
    "^.*(requirements|dependencies).*"
]

[tool.commitizen.settings]
# Types de commits autorisés
allowed_types = [
    "feat",     # Nouvelle fonctionnalité  
    "fix",      # Correction de bug
    "docs",     # Documentation uniquement
    "style",    # Formatage, espaces, etc.
    "refactor", # Refactorisation du code
    "perf",     # Amélioration des performances
    "test",     # Ajout ou modification de tests
    "build",    # Système de build ou dépendances
    "ci",       # Configuration CI
    "chore",    # Maintenance
    "revert"    # Annulation d'un commit
]

check_consistency = true
use_shortcuts = true

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
